# KinectArray

./: CMakeLists.txt  Makefile  README  main.cpp
src/: DeviceManager.cpp  DeviceManager.h  MainWindow.cpp  MainWindow.h  SensorDevice.cpp  SensorDevice.h  defines.h  main.cpp
src/worf/: WorfCamera.cpp  WorfCamera.h  WorfQtGLWindow.cpp  WorfQtGLWindow.h  WorfQtMainWindow.cpp  WorfQtMainWindow.h  coordinate_transform.cpp  coordinate_transform.h  vector.h
